Fix grid overflow

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -17,3 +17,14 @@ nav {
 .nav-labels {
   margin: .75em .75em 0.2em .75em;
 }
+
+@media only screen and (max-width: 1024px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  nav {
+    margin-left: .75em;
+  }
+}
