--- a/src/Poster/Poster.css
+++ b/src/Poster/Poster.css
@@ -1,7 +1,8 @@
 .poster {
   box-sizing: border-box;
-  padding: 10px;
+  /* padding: 10px; */
   color: white;
+  background: #0e0e0e;
 }
 
 .poster:hover {
@@ -11,5 +12,17 @@
 }
 
 .card-img {
-  height: 275px;
+  width: 100%;
+  margin: 0;
+}
+
+.poster-title {
+  height: 3.75em;
+  display: flex;
+  align-items: center;
+  padding-left: .75em;
+}
+
+.poster-rating {
+  padding-left: .75em;
 }
